--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 activityCompose = "1.9.0"
 androidGradlePlugin = "8.3.0"
-coil = "2.3.6"
+landscapist = "2.3.6"
 kotlin = "2.0.0"
 navigationCompose = "2.7.0-alpha07"
 paging = "3.3.0-alpha02-0.5.1"
@@ -21,7 +21,8 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
-coil = { module = "com.github.skydoves:landscapist-coil3", version.ref = "coil" }
+landscapist = { module = "com.github.skydoves:landscapist-coil3", version.ref = "landscapist" }
+landscapist-placeholder = { module = "com.github.skydoves:landscapist-placeholder", version.ref = "landscapist" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 paging-compose = { module = "app.cash.paging:paging-compose-common", version.ref = "paging" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
