--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,3 +40,4 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinComposeMultiplatform" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koinComposeMultiplatform" }
+napier = { module = "io.github.aakira:napier", version = "2.7.1" }
